EVR: fix potential crash on accessing to NV_DX_Interop extension

Under some circumstances wglGetExtensionsStringARB() may return null
pointer (unfortunately, it's still not clear why exactly this might
happen). As a result we get a crash in a subsequent strstr() call.
So for now we just add a simple null pointer check here to avoid the
crash.

Fixes: QTBUG-109710
Change-Id: Ia77ff7b4490f4b817ddddabfdc14750bd69118d0
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 58e0ca625808cb91424d1be05ce3725fb746818f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>